# cppTasks

FigureArea/: a.out  main.cpp  readme.md
LongMath/: LongMath.cbp
RationalCpp/: CMakeLists.txt  RationalCpp.cbp  RationalCpp.depend  RationalCpp.layout  main.cpp  rational.cpp  rational.h
analyzeWeather/: f24959v4.m02  f29574v4.m02  main.py
exam-task-function/: CMakeLists.txt  Exponential.cpp  Exponential.h  Function.cpp  Function.h  Hard_function.cpp  Hard_function.h  Hyperbola.cpp  Hyperbola.h  Line.cpp  Line.h  Log.cpp  Log.h  Parabola.cpp  Parabola.h  Point2d.cpp  Point2d.h  Polinom.cpp  Polinom.h  main.cpp
geometry/: .Circle.cpp.swp  Circle.cpp  Figures.h  Polygon.cpp  Square.cpp  Triangle.cpp  main.cpp  readme.md
musckleVector/: Umas.cpp  Umas.h  Umatrix.cpp  Umatrix.h  main.cpp  readme.md
musckleVector/ufile/: Ufile.cpp  Ufile.h  UfileElement.cpp  UfileElement.h
shashki_predict/: CMakeLists.txt  ascii
shashki_predict/src/headers/: Cell.h  Field.h  Figures.h  Player.h
shashki_predict/src/resourses/: Bishop.cpp  Cell.cpp  Field.cpp  Figure.cpp  King.cpp  Knight.cpp  Pawn.cpp  Player.cpp  Queen.cpp  Rook.cpp  main.cpp
sixDegreesOfSeparation/: a.out  generatinReachability.cpp  readme.md
taskforNetwork/analyzePing/: main.py  readme.md  stats.txt
taskforNetwork/banListTelegram/: a.out  main.cpp  main.py  readme.md
taskforNetwork/i_watching_you/: get_all_frames.sh  get_face_from_key_frame.sh  get_key_frames.sh  json_faces.txt  main.py  readme.md
taskforNetwork/random_sleep_people/: Dockerfile  app.py  readme.md
taskforNetwork/sizeMask/: a.out  (+3 more)
(+18 files in other folders)
