cmake_minimum_required(VERSION 3.20)
project(exam_task_function)

set(CMAKE_CXX_STANDARD 20)

add_executable(exam_task_function main.cpp Function.cpp Function.h Hyperbola.cpp Hyperbola.h Parabola.cpp Parabola.h Point2d.cpp Point2d.h Exponential.cpp Exponential.h Polinom.cpp Polinom.h Line.cpp Line.h)
